Package service refactor (#1)
* Refactor Package Service class

* Done refactor