@@ -28,19 +28,8 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
 
-    sourceCompatibility = 13
-    targetCompatibility = 13
-
-    // Ena ble preview
-    tasks.test {
-        jvmArgs("--enable-preview")
-    }
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += "--enable-preview"
-    }
-    tasks.withType(JavaExec) {
-        jvmArgs += '--enable-preview'
-    }
+    sourceCompatibility = 11
+    targetCompatibility = 11
 
     dependencies {
         // Test framework
@@ -114,13 +103,36 @@ project(':PackageService') {
 }
 project(':PackageService.Core') {
     dependencies {
-        implementation project(':Archipelago.Common')
         implementation project(':PackageService.Common')
+        implementation project(':Archipelago.Common')
+        implementation project(':Archipelago.Common.DynamoDB')
 
         implementation 'com.amazonaws:aws-java-sdk-s3:1.11.692'
         implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.11.692'
+
+        // Needed for DynamoDBLocal
+        testImplementation 'com.amazonaws:DynamoDBLocal:1.12.0'
+        testImplementation 'com.almworks.sqlite4java:sqlite4java:1.0.392'
+    }
+
+    // This allows for the inMemory DynamoDb
+    task copyNativeDeps(type: Copy) {
+        project.logger.lifecycle("Copying native libs")
+        mkdir "build/native-libs"
+        from(configurations.testCompile) {
+            include '*.dll'
+            include '*.dylib'
+            include '*.so'
+        }
+        into 'build/native-libs'
+    }
+    test.dependsOn copyNativeDeps
+    test.doFirst {
+        project.logger.lifecycle("Setting java lib path to \"build/native-libs\"")
+        systemProperty "java.library.path", 'build/native-libs'
     }
 }
+
 project(':PackageService.Client') {
     dependencies {
         implementation project(':Archipelago.Common')
